# AFpsDemo_Server

./: CMakeLists.txt  notes.md
res/: world.scol
src/: main.cpp
src/net/: NetTransport.cpp  NetTransport.h
src/protocol/: Messages.h  Serializer.cpp  Serializer.h
src/server/: CollisionWorld.h  GameServer.cpp  GameServer.h
src/server/collision/: CollisionQueries.cpp  CollisionQueries.h  CollisionWorld.cpp  CollisionWorld.h  PhysicsWorld.cpp  PhysicsWorld.h
src/server/gameplay/ability/: AbilityArbiter.cpp  AbilityArbiter.h  AbilityBase.h  AbilityContext.h  AbilityFwd.h  AbilityLocks.h  AbilityResources.h  AbilitySet.cpp  AbilitySet.h  AbilitySlot.h
src/server/gameplay/ability/abilities/: DashAbility.cpp  DashAbility.h  FireAbility.cpp  FireAbility.h  MeleeAbility.cpp  MeleeAbility.h  ReloadAbility.cpp  ReloadAbility.h  TaskAbility.h
src/server/gameplay/ability/task/: AbilityTask.h  CallFuncTask.h  ChargeHoldTask.h  DashTask.h  EmitEventTask.h  InputGateTask.h  ScopedLocksTask.h  ScopedResourceTask.h  SeqTask.h  TaskAbility.h  TaskStatus.h  WaitTask.h
src/server/gameplay/hero/: HeroCore.cpp  HeroCore.h  HeroDefines.h  HeroEntity.cpp  HeroEntity.h
src/server/gameplay/heroes/: HeroCore.cpp  HeroCore.h  HeroDefines.h
src/server/gameplay/movement/core/: CharacterMotor.cpp  CharacterMotor.h  MovementCommand.h  MovementSourceCollection.cpp  MovementSourceCollection.h  PlayerState.h
src/server/gameplay/movement/sources/: DashMovementSource.cpp  DashMovementSource.h  IMovementSource.h  NetworkInputMovementSource.cpp  NetworkInputMovementSource.h
src/server/gameplay/projectile/: ProjectileSystem.cpp  ProjectileSystem.h
src/server/gameplay/weapon/: WeaponState.h  WeaponSystem.cpp  WeaponSystem.h
src/server/kcc/: CollisionWorld.cpp  CollisionWorld.h  KCC.cpp  KCC.h  kcc.cpp  kcc.h
src/server/physics/: CollisionWorld.cpp  CollisionWorld.h
src/utils/: Utils.h
